Integrated JavaFX